# repl.rigz-lang.org

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
public/: index.html  styles.css
public/js/: highlight.min.js  rigz.js
src/: code.rs  main.rs
src/components/: accordion.rs  footer.rs  header.rs  icon.rs  log_level.rs  mod.rs  results.rs  text_accordion.rs
src/examples/: builtin.rg  errors.rg  loops.rg  objects.rg  processes.rg  tests.rg
src/utils/: log_capture.rs  mod.rs
