[package]
name = "rigz-repl"
version = "0.1.0"
edition = "2024"

[dependencies]
icondata = {version = "0.6", features = ["lucide", "simple-icons"], default-features = false }
gloo-utils = "0.2.0"
itertools = "0.14.0"
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = "0.8"
rigz_core = {  version = "0.1", default-features = false, path = "rigz/crates/core" }
rigz_ast = {  version = "0.6", default-features = false, features = ["format"], path = "rigz/crates/ast" }
# rigz_ast = {  version = "0.6", default-features = false, features = ["format"] }
rigz_runtime = {  version = "0.6", default-features = false, features = ["std_capture", "js"], path = "rigz/crates/runtime" }
# rigz_runtime = {  version = "0.5", default-features = false, features = ["js"] }
console_log = { version = "1", features = ["color"] }
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
js-sys = "0.3.77"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
